tests/mut_newtype_co_in_contra_param.test
type Bad[-T] = {v: T};
####
SyntaxError: Type parameter 'T' is used covariantly here:
type Bad[-T] = {v: T};
                   ^   
Note: But it is declared as contravariant here:
type Bad[-T] = {v: T};
         ^
